# struct-builder

./: .gitignore  Cargo.toml  LICENSE.md  README.md
src/: build_struct.rs  generic_resolution.rs  lib.rs  struct_builder.rs  test_util.rs  unit_struct_builder.rs  unnamed_struct_builder.rs
src/builder/: build_struct.rs  common_struct_builder.rs  common_struct_building.rs  item_builder.rs  mod.rs  named_struct_builder.rs  required.rs  unit_struct_builder.rs  unnamed_struct_builder.rs
src/components/: builder_struct.rs  impl_builder_fns.rs  impl_from_builder_for_subject.rs  impl_from_params_for_subject.rs  impl_from_subject_for_builder.rs  impl_subject_fn_builder.rs  mod.rs  params_struct.rs
struct-builder-test/: Cargo.toml
struct-builder-test/src/: main.rs
struct-builder/src/: item_builder.rs  lib.rs  named_struct_builder.rs
tests/: named_struct_builder.rs  unnamed_struct_builder.rs
